Fix desktop view on mobile

--- a/_sass/tallneck/base.scss
+++ b/_sass/tallneck/base.scss
@@ -2,8 +2,6 @@
  * Base
 */
 html {
-  min-height: 100vh;
-  min-height: 100svh;
   min-width: $min-width;
 }
 
